# ProjectX-Drone-PID-Validation

./: README.md  package.xml  setup.py
config/: coke_can_simple.sdf  panda_ros2_controllers.yaml  simple_camera.sdf  work_table.sdf
launch/: drone_tracking.launch.py  gazebo_panda.launch.py  perception.launch.py
my_robot_controller/: logger_node.py  perception_node.py  tracking_node.py  week1_test_node.py
scripts/: control_node  generate_plots.py  generate_rqt_graph.py  latency_validator.py  perception_node  run_week2.sh  stress_sim.py  stress_test.py  test_image_pub.py  tracking_node  validate_week3.sh  verify_shiva_ready.sh  week1_test_node
src/my_robot_controller/: control_node.py
version_2/: README.md
version_2/control/: control_node_v2.py  pid_controller.py
version_2/launch/: full_system_v2.launch.py
version_2/logger/: logger_v2.py
version_2/metrics/: metrics.py
version_2/plots/: plot.py
version_2/reports/: comparison_report_week5.md  metric_summary_template.md
version_2/scenarios/: scenario_runner.py
version_2/scripts/: compare_baselines.py  repeat_runs.py
